Setting up the Server

--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "main": "server/index.js",
+  "proxy": "http://localhost:3056",
   "name": "shelfie",
   "version": "0.1.0",
   "private": true,
